--- a/pillpassport/app/build.gradle
+++ b/pillpassport/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
