--- a/pillpassport/app/build.gradle
+++ b/pillpassport/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
+    implementation 'com.google.firebase:firebase-ml-natural-language:22.0.0'
+    implementation 'com.google.firebase:firebase-ml-natural-language-translate-model:20.0.7'
 }
 
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
