added translation and new translation view

--- a/pillpassport/app/src/main/AndroidManifest.xml
+++ b/pillpassport/app/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PillContentActivity">
-        </activity>
+        <activity android:name=".PillContentActivity"></activity>
+
+        <activity android:name=".TranslationActivity"></activity>
     </application>
 
 </manifest>
